--- a/deployment.yml
+++ b/deployment.yml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deploy
+  name: app-deploy
   labels:
-    app: nginx
+    app: app
 spec:
   replicas: 2
   strategy:
@@ -13,21 +13,24 @@ spec:
       maxSurge: 1
   selector:
     matchLabels:
-      app: nginx
+      app: app
   template:
     metadata:
       labels:
-        app: nginx
+        app: app
     spec:
-      serviceAccountName: nginx-sa
+      serviceAccountName: app-sa
       containers:
-      - name: nginx
-        image: nginx
+      - name: app
+        image: bitnami/node-example:0.0.1
+        securityContext:
+          runAsUser: 1000
+          runAsGroup: 3000
         ports:
-        - containerPort: 80
+        - containerPort: 3000
         env:
         - name: API_KEY
           valueFrom:
             secretKeyRef:
-              name: nginx-secret
+              name: app-secret
               key: API_KEY
