--- a/hpa.yml
+++ b/hpa.yml
@@ -1,12 +1,12 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: nginx
+  name: app
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: nginx
+    name: app
   minReplicas: 2
   maxReplicas: 5
   targetCPUUtilizationPercentage: 50
