--- a/pdb.yml
+++ b/pdb.yml
@@ -1,9 +1,9 @@
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: nginx-pdb
+  name: app-pdb
 spec:
   minAvailable: 2
   selector:
     matchLabels:
-      app: nginx
+      app: app
