--- a/svc.yml
+++ b/svc.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-svc
+  name: app-svc
 spec:
   type: NodePort
   selector:
-    app: nginx
+    app: app
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
+      targetPort: 3000
